--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@mantine/core": "^5.4.2",
     "@mantine/hooks": "^5.4.2",
     "@mantine/next": "^5.4.2",
+    "@prisma/client": "^4.4.0",
     "next": "12.3.1",
+    "prisma": "^4.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
