--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mantine/core": "^5.4.2",
     "@mantine/hooks": "^5.4.2",
     "@mantine/next": "^5.4.2",
+    "@tailwindcss/typography": "^0.5.7",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
