--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@mantine/next": "^5.4.2",
     "@prisma/client": "^4.4.0",
     "@tailwindcss/typography": "^0.5.7",
+    "@types/bcrypt": "^5.0.0",
+    "bcrypt": "^5.0.1",
     "next": "12.3.1",
     "prisma": "^4.4.0",
     "react": "18.2.0",
