--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "next": "12.3.1",
     "prisma": "^4.4.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@types/node": "18.7.23",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "@types/zxcvbn": "^4.4.1",
     "autoprefixer": "^10.4.12",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
