--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@prisma/client": "^4.4.0",
     "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.0.1",
+    "iron-session": "^6.2.1",
     "next": "12.3.1",
     "prisma": "^4.4.0",
     "react": "18.2.0",
