--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "@mantine/next": "^5.4.2",
     "@prisma/client": "^4.4.0",
     "@types/bcrypt": "^5.0.0",
-    "babel-plugin-superjson-next": "^0.4.4",
     "bcrypt": "^5.0.1",
     "iron-session": "^6.2.1",
     "next": "12.3.1",
+    "next-superjson-plugin": "^0.4.2",
     "prisma": "^4.4.0",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
