--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "superjson": "^1.10.0",
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
