--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mantine/form": "^5.4.2",
     "@mantine/hooks": "^5.4.2",
     "@mantine/next": "^5.4.2",
+    "@mantine/notifications": "^5.4.2",
     "@prisma/client": "^4.4.0",
     "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.0.1",
